--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -343,7 +343,7 @@ The introduction of a half-baked template and UMC approach had the unintended co
 
 While the in-tool scaffolding within primary tool outlined in the previous section reduced initial reliance on facilitator instruction [@laurillard2020significance], it did not aid participants wanting to implement new features or add code structures into their game (e.g. the _Create_ stage of UMC). In P1 and early in P2 my guidance and often direct help adding or altering code structures was needed at this stage, causing delays and participant frustration due to my limited time with each participant or pair. The documentation created in P1 lacked coherence in approach and any system for users to navigate the resources created.
 
-In the development period (D1) after P1 reflection on the tension between learner agency, in particular the role of divergent participant learning paths, and the role of facilitator-led instruction and support reoccurs consistently in my notes at this time. My reflection was partly driven by two attempts in P1 of whole class instruction of key coding concepts that I judged to be relevant to the wider group. My reflection on these interventions noted that in learners engagement was low, surmising perhaps that learners viewed this instruction as not immediately relevant, as alien to their favoured hands on style of working, or as an interruption to the flow of their making activities. This observation aligns with the concept of just-in-time learning approaches within project based approaches[@riel1998education], where access of supporting documentation is provided based on learner-need. In the D1 development period, I struggled with how to resolve my desire to support this responsive approach with requests from some from parents in the feedback to P1 to also provide background concepts and explanations of coding constructs. The design and implementation of supporting resources continued to evolve at a frantic pace at the start of P2 and I finally created three main sources of documentation: quick start cards, written instructions and code snippets which are outlined in the following section.
+In the development period (DA) after P1 reflection on the tension between learner agency, in particular the role of divergent participant learning paths, and the role of facilitator-led instruction and support reoccurs consistently in my notes at this time. My reflection was partly driven by two attempts in P1 of whole class instruction of key coding concepts that I judged to be relevant to the wider group. My reflection on these interventions noted that in learners engagement was low, surmising perhaps that learners viewed this instruction as not immediately relevant, as alien to their favoured hands on style of working, or as an interruption to the flow of their making activities. This observation aligns with the concept of just-in-time learning approaches within project based approaches[@riel1998education], where access of supporting documentation is provided based on learner-need. In the D1 development period, I struggled with how to resolve my desire to support this responsive approach with requests from some from parents in the feedback to P1 to also provide background concepts and explanations of coding constructs. The design and implementation of supporting resources continued to evolve at a frantic pace at the start of P2 and I finally created three main sources of documentation: quick start cards, written instructions and code snippets which are outlined in the following section.
 
 
 <!-- or a nagivational , especially when combined with the disparate approach to graphical and audio asset creation, had resulted in an overly complex object. -->
@@ -359,17 +359,14 @@ While step-by-step instruction could build up experience with tools and concepts
 <!-- Longer form step by step tutorials are common in computing education. Examples can be found in Code Academy, and in the education resources of RPi foundation. Many examples talking learners through steps to build a game can be found online with varied amount of explanation of underlying constructs and concepts. I started my journey learning JS games using some provided
 by Mozilla and the Phaser developers. -->
 
-#### Forms of Documentation which addressed contradictions
+#### The use of documentation to address contradictions
 
-
-**Quick Start Cards:**
-
-Quick start cards, supporting simple print outs drawing attehntion to key affordances of the template outline above, became a key resource used to get started in using the starting template game.  During the development period D1, I used the revised template design in a one-off game making with computer trainee teacher computing students. I ended with a challenge to create an activity for one-off holiday activities around creative game coding for families. In response, three students created printable word documents highlighting key affordances of the design in a way which mirrored my facilitation of their game making session. Specifically, the printed resources highlighted the key lines of code and how they can be altered to impact on game behaviour (see figure 5.x below).
+This section looks at the introduction of quick start cards, instructional documents and code snippets to address some of the contradictions of the learning design outline above. Quick start cards, supporting simple print outs drawing attention to key affordances of the template outline above, became a key resource used to get started in using the starting template game. During the development period D1, I used the revised template design in a one-off game making with computer trainee teacher computing students. I ended with a challenge to create an activity for one-off holiday activities around creative game coding for families. In response, three students created printable word documents highlighting key affordances of the design in a way which mirrored my facilitation of their game making session. Specifically, the printed resources highlighted the key lines of code and how they can be altered to impact on game behaviour (see figure 5.x below).
 
 ![](./Pictures/velocity_jscard.png){width=95%}
 4.x - Example of a Quick start card
 
-At this stage the options involved, the game mechanics of movement, jumping, level design, and final challenge to swap out the look of one or more of the characters by designing pixel art, and swapping out the line of code that adds the asset to the game. A current version of the quick start cards are available online at the online technical repository for this study [^] ADD THE LINK HERE.
+At this stage the options involved, the game mechanics of movement, jumping, level design, and final challenge to swap out the look of one or more of the characters by designing pixel art, and swapping out the line of code that adds the asset to the game. A version of the quick start cards are available online and as part of Appendix.tech [^].
 
 These _quick start_ cards supported participants initial interaction with the code in a way strongly aligned with the _use_ and _modify_ stages of the UMC framework [@franklin_analysis_2020]. The start process addressed the tension concerning the issue of providing documentation with support for users to be able complete coding tasks but also facilitate choice over learner pathways.
 
