--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -184,7 +184,7 @@ As the sessions continued, with many creatively processes happening simultaneous
 <!-- A crisis point developed (despite the input of parents) to help an organisational process. While participants were being supported to develop assets in the form or game characters and ideas for features were being documented via lists, participants  did not have a working either a working knowledge of the tools used, or a process to start to build that knowledge. My own process of self research and informed tinkering drew on years of experience and was therefore not suitable as participants did not share those coding repertoires or familiarity with coding tools. While the suggested tools were theoretically available to the participants online, they were therefore stuck nevertheless.  -->
 
 
-![tensions with tools](./Pictures/At_tension_1_v1.png){width=95%}
+![tensions with tools](./Pictures/At_tension_1_v2.png){width=95%}
 Figure 5.C1: Representation of emerging areas of contradictions in mid-P1 game making process
 
 
@@ -378,9 +378,7 @@ These _quick start_ cards supported participants initial interaction with the co
 
 To meet participants’ requests for foundational coding knowledge, in D1, I developed an online manual with step-by-step chapters guiding users through coding the core template structure. While this linear format did not fully align with my choice-led face-to-face sessions, I envisioned it as supplementary reinforcement for learning outside of sessions. Writing these chapters revealed a technique that helped balance structured guidance with choice-driven learning. Each chapter demonstrated a code feature or principle through a playable game project based on the core game template hosted in an online code playground. While the use of code examples or _snippets_ are a common professional practice in problem-solving [@yang_stack_2017], their use by novice learners presents challenges related to relevance, consistency, and accessibility [@treude_understanding_2017]. Initially, I had encouraged participants to use code snippets from the Phaser website, but their difficulties understanding and applying these abstracted examples prompted me to create more tailored resources.
 
-I later extended this approach by creating standalone code snippets that illustrated requested game features as gameplay design patterns, such as _jumping on an enemy to zap it_ and _making a moving enemy_ (see Appendix.toby for an applied example). In the early stages  of P2, learners accessed these projects through a simple Google document with links and brief descriptions. I continued developing new projects and producing printable instructions to support these code snippets, ensuring that each snippet linked to a descriptive chapter and vice versa. To help learners situate the code within the correct structure, all projects used the core game template and included only the new code required for each feature.
-
-I also experimented with ways to present these feature choices in an accessible, engaging format, which I describe in detail in Appendix 5.map. Recognising that multiple documentation formats sometimes led to confusion, I created a centralised hub to host both snippets and tutorial chapters, making navigation more intuitive and orienting documentation towards participants' gameplay experience.
+I later extended this approach by creating standalone code snippets that illustrated requested game features as gameplay design patterns, such as _jumping on an enemy to zap it_ and _making a moving enemy_ (see Appendix.toby for an applied example). In the early stages  of P2, learners accessed these projects through a simple Google document with links and brief descriptions. I continued developing new projects and producing printable instructions to support these code snippets, ensuring that each snippet linked to a descriptive chapter and vice versa. To help learners situate the code within the correct structure, all projects used the core game template and included only the new code required for each feature. I also experimented with ways to present these feature choices in an accessible, engaging format, which I describe in detail in Appendix 5.map. Recognising that multiple documentation formats sometimes led to confusion, I created a centralised hub to host both snippets and tutorial chapters, making navigation more intuitive and orienting documentation towards participants' gameplay experience.
 
 <!-- My rationale was that each pattern added builds familiarity with the code structure. -->
 
@@ -394,7 +392,7 @@ Figure 5.patterns : a screenshot of the hub of GDPs pointing to code snippets an
 
 <!-- **Return to vignette**
 
-Returning to the vignette of the child Toby described earlyer in this chapter we can see him use, rather than the written step-by-step help, jump into the code example, searching for the new code constructs and in-line code comments notes in the code highlighting their purpose.
+Returning to the vignette of the child Toby described earlyer in this chapter we can see him use, rather than the written step-by-step help, jump into the code example, searching for the new code constructs and in-line code comments nov1.tes in the code highlighting their purpose.
 
 Thus, while not proof of overall efficacy of the use of code snippets the pattern of behaviour of Toby in the implementation of code is promising.
 IN TERMS OF ... -->
@@ -419,9 +417,9 @@ Table 5.x Categorisation of game design patterns used in P4.
 
 #### Resolution of C2
 
-This section outlined two key types of secondary support tools developed in response to tensions arising after introducing the primary tools discussed in the previous section. While the code snippets, practical instructions, and chapters on core principles continued to pose some challenges (as seen in vignette 6.S with Suzanna and T), the video data analysed in the following chapter shows an increase in participants’ practical ability to implement game features, suggesting an enhancement in their instrumental agency. In addition, participants' increase in agency extends beyond just instrumental application. In both P1 and P2, participants made specific requests for new features, which, when deemed suitable by me as the facilitator, were added to the menu of game design patterns. This choice-driven approach can be seen as both relational and authorial agency within the framework discussed in Chapter 3.
+This section outlined two key types of secondary support tools developed in response to tensions arising after introducing the primary tools discussed in the previous section. While the code snippets, practical instructions, and chapters on core principles continued to pose some challenges (as seen in Vignette 6.1), the video data analysed in the following chapter shows an increase in participants’ practical ability to implement game features, suggesting an enhancement in their instrumental agency. In addition, participants' increase in agency extends beyond just instrumental application. In both P1 and P2, participants made specific requests for new features, which, when deemed suitable by me as the facilitator, were added to the menu of game design patterns. This choice-driven approach can be seen as both relational and authorial agency within the framework discussed in Chapter 3.
 
-LINK & MORE SIGNPOSTING?
+<!-- LINK & MORE SIGNPOSTING? -->
 
 
 ### C3 - Responding to tensions and barriers in cultural aspects of the game making activity
@@ -429,22 +427,18 @@ LINK & MORE SIGNPOSTING?
 <!-- ### Design narrative on conflict due to identity clashes and dysfunctional group work -->
 
 <!-- **Participants stuck / demotivated : scope of ambition to high,   collaboration groups too big (transition),** -->
-
-Some participants felt alienated when transitions shifted to coding not only due to tool use but a sense of alienation from the culture of coding, an experiences which aligns with research on cultural exclusion from coding processes explored in Chapter 2 [SEVERAL REFERENCES] [@kafai_constructionist_2015-1]. As explored in a previous section, in P1 my opening design employed several non-coding techniques to promote positive affect to form an inclusive idioculture to avoid alienation from foreign coding tools. While these were noted as positive in P1 feedback,  several tensions compounded for the family described in Appendix 5.bee to create a conflict  composed of accumulating tensions from alienation from the group coding environment and associated peer working dynamics which they resolved by choosing not to continue with the activity. The transition from the non-code creative activities to enacting them with code that spurred alienation from a perceived culture of hard core coding at that stage of the process.  While there were technical aspects to the conflict, these were compounded with more social and cultural barriers that also arose.
-
 <!-- These activities including starter games and game playing on entry and sharing of gaming experience of let laptops with games installed on them. -->
 
-![tensions with cultural layers](./Pictures/At_tension_2_v1.png){width=95%}
+Some participants experienced alienation during the transition to coding, stemming not only from challenges with tools but also from a sense of exclusion from the culture of coding. This aligns with research on cultural barriers in coding processes, as discussed in Chapter 2 [@kafai_constructionist_2015-1]. In P1, as described above, I incorporated several non-coding techniques to foster positive affect and create an inclusive idioculture, aiming to reduce alienation from unfamiliar coding tools. While participant feedback on these techniques was positive, accumulated tensions led one family, described in the case study Appendix 5.bee, to disengage. Members of this family actively engaged in planning on paper and creating pixel art. However, tensions arose when the introduced coding framework did not support a desired feature, which was a bee design roaming a 3D landscape. During participant feedback, the parent expressed a preference for more hands-on play and exploration of the tools of production before being required to make creative decisions. This case study highlighted several key concerns for the design. Firstly, it underscored the fragility of learners’ positive affect during the transition from the planning and sketching phase to the coding phase of the game-making process. Secondly, it revealed the limitations of peer support, as fellow participants were often unable to address more complex issues independently. Lastly, it highlighted a potential imbalance in facilitator attention, as participants more confident in coding sometimes created complex problems requiring significant facilitator time, potentially leaving others feeling less valued.
+
+Though technical challenges related to the use of tools played a role, this area of conflict was compounded by social and cultural factors, ultimately leading to the family's decision to step away from the activity. The tensions arising from the expectation to transition from non-coding creative activities to coding tools are depicted in Fig. 5.x below. This figure illustrates how the family’s positioning and alienation from the coding environment, perceived as a space for _hardcore coding_ (participants phrase), represent a tension between the division of labour and the object of activity.
+
+![tensions with cultural layers](./Pictures/At_tension_2_v2.png){width=95%}
 
 Fig 5.x - Tensions involving cultural aspects of the game making process
 
-Members of this family had engaged in planning on paper and in particularly in creating pixel art, however tensions began to emerge when the introduced code framework  did not support the desired features of one child. The feature they wanted to add to the game was bee design roaming a 3D landscape.  
-
-In participant feedback, the  parent of one  family described in Appendix 5.x indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach.
-
-The feedback given in particular by this family  surfaced some key matters of concern for this design. Firstly, the fragility of learners ongoing positive affect towards the group game making process caused by a transition from planning, sketching phase of the design process to code enactment.  Secondly,  a danger that those more confident in coding create more involved code problems that need more facilitator time, potentially making others feel less valued. Thirdly, it highlighted the limits of what peer support from fellow participants could provide (explored in appendix).  
-
-This reflection on this conflict motivate several changes in the learning design in the plane of cultural activity.  While Chapter 7 analyses the participant reactions to the design in this more cultural dimension, here I (try to) limit exploration to the evolution of key learning design features addressing this aspect, namely the identification and nurturing of social coding processes.
+My reflections on this conflict prompted several changes in the learning design to address factors situated within the plane of cultural activity. While Chapter 7 focuses on analysing participant reactions to the design from a more cultural perspective in greater depth, this section is limited to exploring the evolution of key learning design features addressing these issues, particularly the identification and fostering of social coding processes.]
+MORE SIGNPOSTING?
 
 <!--
 NOTE MOVE
@@ -454,6 +448,8 @@ Chapter 6 analyses the potential of activities which help build the participants
 #### Social coding processes
 
 While changes in the tools, documentation use were initially designed to solve technical problems, they also impacted the culture of the coding group.
+
+
 In particular the starting template/ half baked template, had particular impact on division of labour, and a knock on positive impact on general engagement.
 
 DOES THIS GO EARLIER?
