--- a/_posts/thesis_chapters/2024-11-5-Design.md
+++ b/_posts/thesis_chapters/2024-11-5-Design.md
@@ -153,7 +153,7 @@ The following sections of this chapter examine three main areas of contradiction
 
 ### C1 - contradictions involving the use of game programming and asset authoring tools
 
-In this section, I draw on journal notes to describe emerging tensions in kickstarting participant game design activity and the subsequent evolution in tool use between P1 and P2. My initial focus in the early stages was to create a welcoming, low-pressure environment for introducing and exploring the process of making games. To achieve this, I used several activities unrelated to computer coding to scaffold the game design process. Early sessions included playing and discussing retro arcade games, analyzing their components, brainstorming game story scenarios, creating pixel-art characters on paper, and making craft collages for game backgrounds. I also provided learners with a laptop loaded with vintage arcade and console games to help build familiarity with arcade and retro game tropes through home play. Scenes and characters began to take shape during these relatively unstructured planning sessions, with three groups of roughly five participants forming. We then discussed, in simple terms, the game features they wanted to include. Coding tools and processes were introduced in week five, a delay driven by my concern about the potentially alienating effect of engaging with the unfamiliar experience of computer code. My own motivation to build on prior research into novice use of authentic web text languages, such as JavaScript [@chesterman_webmaking_2015], rather than simplified block-based code, likely heightened this possibility. For a fuller technical breakdown of the tools used in each phase, see Appendix 5.tech.
+In this section, I draw on journal notes to describe emerging tensions in kickstarting participant game design activity and the subsequent evolution in tool use between P1 and P2. My initial focus in the early stages was to create a welcoming, low-pressure environment for introducing and exploring the process of making games. To achieve this, I used several activities unrelated to computer coding to scaffold the game design process. Early sessions included playing and discussing retro arcade games, analysing their components, brainstorming game story scenarios, creating pixel-art characters on paper, and making craft collages for game backgrounds. I also provided learners with a laptop loaded with vintage arcade and console games to help build familiarity with arcade and retro game tropes through home play. Scenes and characters began to take shape during these relatively unstructured planning sessions, with three groups of roughly five participants forming. We then discussed, in simple terms, the game features they wanted to include. Coding tools and processes were introduced in week five, a delay driven by my concern about the potentially alienating effect of engaging with the unfamiliar experience of computer code. My own motivation to build on prior research into novice use of authentic web text languages, such as JavaScript [@chesterman_webmaking_2015], rather than simplified block-based code, likely heightened this possibility. For a fuller technical breakdown of the tools used in each phase, see Appendix 5.tech.
 
 <!-- My previous research had explored the use of interactive, personal media creating using webpage languages of HTML, css and JavaScript [@chesterman_webmaking_2015]. I was keen to explore the potential of game authoring within a similar environment. As such, I drew on the documentation of the Mozilla community and selected Phaser as a JavaScript game making framework and Mozilla Thimble as a code playground (concepts explored in the literature review). A fuller technical break down of the tools used in each phase is omitted as it interrupts the flow of this narrative but it included as  
 MOVE SOME OF THIS TO INTRODUCTION
